--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_question">questionActivity</string>
     <string name="title_activity_quote">quoteActivity</string>
+    <string name="title_activity_recycler">recyclerActivity</string>
 </resources>
